--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,24 @@
 }
 
 
+.button{
+    position: absolute;
+    top: 40px;
+    right: 10px;
+}
+
 /* Main */
 
+
+.button > a{
+    display: inline-block;
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    padding: 15px 19px;
+    margin: 0px 15px;
+    border-radius: 50%;
+}
 
 .red{
     background-color: var(--bg-box1);
